# cycode

./: CONTRIBUTING.md  CYGNIS.md  CYGNISAI-CONSOLE-API.md  CYGNISAI.md  LICENCE  PARITY.md  PowerShell.md  README.md  SECURITY.md  USAGE.md  cycode  install-cycode.ps1  mypy.ini  pyproject.toml  setup.py  uninstall_cycode.ps1  version.md
.claude/: settings.json
.github/workflows/: ci.yml
cycode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rust/: .gitignore  CLAUDE.md
rust/.claw/plugins/: installed.json
rust/.claw/sessions/: session-1775494683360-0.jsonl  session-1775588563865-0.jsonl  session-1775589175236-0.jsonl  session-1775589555431-0.jsonl  session-1775589824944-0.jsonl
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: anthropic.rs  cygnis.rs  mod.rs
rust/crates/commands/src/: lib.rs
rust/crates/mock-cygnis-service/: Cargo.toml
rust/crates/mock-cygnis-service/src/: main.rs
rust/crates/plugins/src/: hooks.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/telemetry/src/: lib.rs
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
src/: cycode_cli.py  cycode_repl.py  main.py  query_engine.py  replLauncher.py  startup_screen.py  tasks.py
src/services/: __init__.py  cycode_admin_service.py  cycode_base.py  cycode_chat_service.py  cycode_inference_service.py  cycode_system_service.py
