[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycode"
version = "2.0.100"
description = "Assistant de codage IA avancé"
# Ajoutez cette ligne dynamique pour corriger l'erreur
dynamic = ["requires-python"]

dependencies = [
    "requests",
    "rich",
    "prompt_toolkit",
]

[project.scripts]
cycode = "src.cycode_repl:launch_repl"

# Déclarez ceci ici explicitement pour que setuptools le prenne en compte
[tool.setuptools]
license-files = []

[tool.setuptools.dynamic]
requires-python = { text = ">=3.9" }
