[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycode"
version = "2.0.100"
description = "Assistant de codage IA avancé"
# La déclaration correcte est ici, de façon statique
requires-python = ">=3.9"

dependencies = [
    "requests",
    "rich",
    "prompt_toolkit",
]

[project.scripts]
cycode = "src.cycode_repl:launch_repl"
